# Simple-Editor

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: additions.rs  default_settings.hjson  finish.rs  fns.rs  init.rs  main.rs  prelude.rs  render.rs  unwind.rs  update.rs
src/background_tasks_mod/: background_tasks.rs
src/data/: errors.rs  mod.rs  program_data.rs  settings.rs
src/data_mod/: errors.rs  program_data.rs  settings.rs
src/task_fns/: tasks.rs
src/tasks_mod/: events.rs  mod.rs  tasks.rs
src/update_mod/: events.rs  mod.rs  update.rs
