[package]
name = "simple_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.*"
serde-hjson = "0.*"
regex = "1.*"
array-init = "2.*"
lerp = "0.*"
derive_is_enum_variant = "0.*"
fmt-derive = "0.*"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image", "ttf"]
